--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,23 +32,34 @@ android {
 }
 
 dependencies {
+
     def nav_version = "2.3.4"
     def room_version = "2.2.6"
     def lifecycle_version = "2.3.1"
+    def koin_version = "1.0.2"
+
     //Core
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+
     //Material
     implementation 'com.google.android.material:material:1.3.0'
+
     //Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
     //LifeCycle ViewModel and LiveData
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
     //Room database
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    //Koin for dependency injection
+    implementation "org.koin:koin-android-viewmodel:$koin_version"
+
     //Test
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
